--- a/package.json
+++ b/package.json
@@ -22,5 +22,9 @@
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
+    },
+    "dependencies": {
+        "@babel/core": "^7.4.0",
+        "@babel/preset-env": "^7.4.2"
     }
 }
